@@ -1,0 +1,5 @@
+MD5 (fwknop-2.0.4.tar.bz2) = mHgTfdXTUqGWO2GKlkcviw==
+RMD160 (fwknop-2.0.4.tar.bz2) = EKwI3hgbIAFBn7P4ycYfdbkzsWI=
+SHA1 (fwknop-2.0.4.tar.bz2) = rPhumfUKKbktna8Z5BOAuqX6rcc=
+SHA256 (fwknop-2.0.4.tar.bz2) = ooZRWMCcZEaQPZ712BxYHCDXevPcUjQn0RI3AjKYedQ=
+SIZE (fwknop-2.0.4.tar.bz2) = 1251804
