@@ -1,0 +1,2 @@
+@comment $OpenBSD$
+@lib lib/libfko.so.${LIBfko_VERSION}
