@@ -1,0 +1,11 @@
+@comment $OpenBSD$
+%%SHARED%%
+@bin bin/fwknop
+include/fko.h
+@info info/libfko.info
+lib/libfko.a
+@comment lib/libfko.la
+@man man/man8/fwknop.8
+@man man/man8/fwknopd.8
+@bin sbin/fwknopd
+@rcscript ${RCDIR}/fwknopd
