@@ -1,3 +1,7 @@
+fwknop-2.0.5 (//2013):
+    - (Vlad Glagolev) Submitted an OpenBSD port for fwknop-2.0.4, and this has
+      been checked in under the extras/openbsd/fwknop-2.0.4 directory.
+
 fwknop-2.0.4 (12/09/2012):
     - [client] Misc fixes and the addition of save_args and last command 
       (.fwknop.last) support on the Windows platform.
